loopfor.LoopStairs.scala.code
baisseBrosse()
vance()
while (estFaceMur()) {
  gauche();
  avance();
  droite();
}